# openpinebuds-source-reconstruction

./: .gitignore  .hg_archival.txt  AutoEvents.cpp  BUILD.gn  Dockerfile  Kconfig.liteos_m.defconfig  Kconfig.liteos_m.series  Kconfig.liteos_m.soc  Makefile  MassStorage.cpp  OAT.xml  README.en.md  README.md  USBHost.cpp  Utils.cpp  Utils.h  aes.h  build.sh  docker-compose.yml  main.cpp  notes.txt
bes2600/liteos_m/components/ui/: BUILD.gn  display_device.cpp  display_device.h  fbdev.cpp  ui_main.cpp
bes2600/liteos_m/sdk/: BUILD.gn  LICENSE
bes2600/liteos_m/sdk/bsp/: README.en.md  README.md
bes2600/liteos_m/sdk/bsp/config/: common.mk
bes2600/liteos_m/sdk/bsp/scripts/: build.mk  submods.mk  submods_init.mk
bes2600/liteos_m/sdk/bsp/services/: Makefile
bes2600/liteos_m/sdk/bsp/tools/: build_best2600w_ohos_into_lib.sh  mklittlefs
bes2600/liteos_m/sdk/tools/: build_lib_into_hmos_out.sh  config.sh
bes2600w/: BUILD.gn  build_lib_into_hmos_out.sh  gen_bes2600w_hmos_bin.sh  readme_zh.md
bes2600w/burn_tools/tools/: gen_yaml.py  gen_yaml_signle.py  genfs.sh  init_burn_tools.sh  pack_burn_tools.sh  sig_bin.sh  wifi_Download_cfg.yaml
bes2600w/burn_tools/write_flash_gui/: wifi_Download_cfg.yaml
bes2600w/burn_tools/write_flash_gui/dld_cfg/: wifi_Download_cfg.yaml  wifi_Download_cfg_rd.yaml
bes2600w/burn_tools/write_flash_gui/dld_main/: Microsoft.VC90.CRT.manifest  dld_main.exe.manifest
bes2600w/components/: components.gni
bes2600w/components/communication/wifi_lite/wifiservice/: BUILD.gn
bes2600w/components/config/: device_info.hcs  hdf.hcs
bes2600w/components/drivers/: BUILD.gn  drivers.gni
bes2600w/components/drivers/display/: BUILD.gn
bes2600w/components/drivers/display/hal/: BUILD.gn  disp_hal.c
bes2600w/components/drivers/display/hdi/: BUILD.gn  display_gfx.c  display_gralloc.c  display_layer.c
bes2600w/components/drivers/flash/: BUILD.gn  flash.c  flash.h  flash_conf.c
bes2600w/components/drivers/gpio/: BUILD.gn
bes2600w/components/drivers/i2c/: BUILD.gn  i2c.c
bes2600w/components/drivers/lcd/: BUILD.gn  lcd_rm69330.c
bes2600w/components/drivers/mipi_dsi/: BUILD.gn  mipi_dsi.c
bes2600w/components/drivers/pwm/: pwm.c
bes2600w/components/drivers/spi/: BUILD.gn  spi.c
bes2600w/components/drivers/touch/: BUILD.gn  touch.c  touch.h  touch_fts.c  touch_fts.h  touch_ztw523.c
bes2600w/components/drivers/touch/include/: touch_if.h
bes2600w/components/drivers/uart/: BUILD.gn
bes2600w/components/drivers/watchdog/: BUILD.gn  watchdog.h
bes2600w/components/fs/: BUILD.gn  fs_init.c  littlefs.c  littlefs.h
bes2600w/components/net/dhcpd/: BUILD.gn  common_subr.h  dhcpd.c  dhcpd.h  dhcpd_conf.h  leases.h
bes2600w/components/net/lwip-2.1/: BUILD.gn  lwip_porting.gni
bes2600w/components/ui/: BUILD.gn  display_device.cpp  touch_input.cpp  touch_input.h  ui_main.cpp  ui_main.h
bes2600w/components/utils/: BUILD.gn
bes2600w/components/utils/src/: hm_sys.c  platform.c  printf.c  threading_alt.c
bes2600w/components/watchdog/: BUILD.gn  hi_watchdog.c
bes2600w/drivers/: BUILD.gn  drivers.gni  hdf.gni
bes2600w/drivers/display/: BUILD.gn
bes2600w/drivers/display/hal/: disp_hal.c  disp_hal.h  lcd_abs_if.h
bes2600w/drivers/flash/: BUILD.gn  flash.c  flash.h  flash_conf.c
bes2600w/drivers/gpio/: BUILD.gn  gpio.c  gpio.h
bes2600w/drivers/i2c/: BUILD.gn  i2c.c  i2c.h
bes2600w/drivers/lcd/: BUILD.gn  lcd_rm69330.c
bes2600w/drivers/mipi_dsi/: BUILD.gn  mipi_dsi.c  mipi_dsi.h
bes2600w/drivers/pwm/: pwm.c  pwm.h
bes2600w/drivers/spi/: spi.c  spi.h
bes2600w/drivers/tests/: BUILD.gn  disp_test.c  driver_test.h  gpio_test.c  i2c_test.c  spi_test.c  touch_test.c
bes2600w/drivers/touch/: BUILD.gn  touch.c  touch.h  touch_ztw523.c  touch_ztw523.h
bes2600w/drivers/touch/include/: touch_if.h
bes2600w/drivers/uart/: uart.c  uart.h
bes2600w/hals/communication/bluetooth/: BUILD.gn  ohos_bt_gap.c  ohos_bt_gatt.c  ohos_bt_gatt_server.c
bes2600w/hals/communication/wifi_lite/wifiservice/: BUILD.gn  wifi_device.c  wifi_hotspot.c  wifi_net.c  wifi_storage.c  wifi_storage.h
bes2600w/hals/iot_hardware/wifiiot_lite/: BUILD.gn  hal_iot_flash.c  hal_iot_gpio.c  hal_iot_uart.c  hal_iot_watchdog.c  hal_lowpower.c  hal_reset.c
bes2600w/hals/security/huks/: BUILD.gn  hks_client.c  threading_alt.h
bes2600w/hals/update/: BUILD.gn  hal_hota_board.c  hal_update_board.h
bes2600w/hals/utils/file/: BUILD.gn
bes2600w/hals/utils/file/src/: hal_file.c
bes2600w/resources/: genfs.sh
bes2600w/resources/data/: demo.txt
bes2600w/sdk_liteos/: BUILD.gn  config.gni
bes2600w/sdk_liteos/bsp/: BUILD.gn
bes2600w/sdk_liteos/bsp/apps/battery/: app_battery.h
bes2600w/sdk_liteos/bsp/apps/cmd/: app_cmd.h
bes2600w/sdk_liteos/bsp/apps/common/: app_spec_ostimer.h  app_thread.h  app_trace_rx.h  app_uart_dma_thread.h  app_utils.h
bes2600w/sdk_liteos/bsp/apps/factory/: app_factory.h  app_factory_audio.h  app_factory_bt.h  app_factory_cdc_comm.h  sys_api_cdc_comm.h
bes2600w/sdk_liteos/bsp/apps/factory_wifi/: app_factory_wifi.h
bes2600w/sdk_liteos/bsp/apps/key/: app_key.h
bes2600w/sdk_liteos/bsp/apps/main/: app_status_ind.h  apps.h
bes2600w/sdk_liteos/bsp/apps/mic/: app_mic.h
bes2600w/sdk_liteos/bsp/apps/pwl/: app_pwl.h
bes2600w/sdk_liteos/bsp/config/best2600w_liteos/: tgt_hardware.h
bes2600w/sdk_liteos/bsp/include/watchdog/: watchdog.h
bes2600w/sdk_liteos/bsp/net/wifi/: bwifi_event.h  (+6 more)
bes2600w/sdk_liteos/bsp/tools/: build_best2600w_ohos3.0_into_lib.sh
bes2600w/sdk_liteos/components/fs/: BUILD.gn
bes2600w/sdk_liteos/components/ui/: BUILD.gn  display_device.h  fbdev.h
bes2600w/sdk_liteos/components/watchdog/: hi_watchdog.h
bes2600w/sdk_liteos/fs_adapter/: BUILD.gn  littlefs_vfs.c  littlefs_vfs.h
bes2600w/sdk_liteos/fs_adpater/: BUILD.gn
bes2600w/sdk_liteos/hals/: BUILD.gn
bes2600w/sdk_liteos/sdk/: BUILD.gn
bes2600w/sdk_liteos/sys_adapter/: BUILD.gn
bes2600w/sdk_liteos/sys_adapter/include/: hm_sys.h  los_hwi.h
bes2600w/sdk_liteos/sys_adapter/src/: hm_sys.c
bes2600w/sdk_liteos/tools/: build_lib_into_hmos_out.sh  config.sh
(+2075 files in other folders)
