# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/subsystem/lite_subsystem.gni")
import("//build/lite/config/component/lite_component.gni")

group("bes2600w") {
}

executable("wifiiot_sdk_bes2600w") {
    output_name = "wifiiot_sdk_bes2600w"
    output_extension = "elf"
    deps = [
        ":build_sdk_into_lib",
        "//device/bestechnic/bes2600w/sdk_liteos/sys_adapter:sys_adapter",
        "//base/startup/bootstrap_lite/services/source:bootstrap",
        "//kernel/liteos_m:kernel"
        ]

    bsp_path = rebase_path("sdk_liteos")

    ldflags = [
        "-Wl,--wrap=malloc",
        "-Wl,--wrap=calloc",
        "-Wl,--wrap=free",
        "-Wl,--wrap=realloc",
        "-Wl,--gc-sections",
        "-Wl,-Map=bin/$output_name.map",
        "-T$bsp_path/bsp/out/best2600w_liteos/_best2001.lds",
    ]

    libs = [
        "m",
        "stdc++"
    ]

    libs += [
        "best2600w_liteos",
    ]

    deps += [
        "//build/lite:ohos",
    ]

}

build_ext_component("build_sdk_into_lib") {
    exec_path = rebase_path(".")
    print("product_name:",product_name)
    print("mini_os_enable:",mini_os_enable)
    print("trust_en:",trust_en)
    print("build_type:",ohos_build_type)
    command = "./build_lib_into_hmos_out.sh ${product_name} ${trust_en} ${mini_os_enable} ${ohos_build_type}"
}

build_ext_component("build_bin") {
    exec_path = rebase_path(".")
    command = "./gen_bes2600w_hmos_bin.sh ${product_name}"
    deps = [
        ":build_sdk_into_lib",
        ":wifiiot_sdk_bes2600w",
    ]
}
