# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

declare_args() {
  ##################################################
  # build configurations
  ##################################################
  bes_trustzone_enable = false

  ##################################################
  # components configurations
  ##################################################
  bes_communication_wifi_lite_enable = true

  bes_drivers_gpio_enable = false
  bes_drivers_i2c_enable = false
  bes_drivers_spi_enable = false
  bes_drivers_uart_enable = false
  bes_drivers_pwm_enable = false
  bes_drivers_flash_enable = false
  bes_drivers_mipi_dsi_enable = false
  bes_drivers_lcd_enable = false
  bes_drivers_display_enable = false
  bes_drivers_touch_enable = false

  bes_fs_enable = false

  bes_ui_enable = false
  bes_ace_enable = false
  bes_ability_enable = false

  ##################################################
  # test configurations
  ##################################################
  bes_drivers_test = false
  bes_wifi_test = false
  bes_fs_test = false
  bes_ui_test = false
  bes_ability_test = true
}
