# Copyright (c) 2021 bestechnic (Shanghai) Technologies CO., LIMITED.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/subsystem/lite_subsystem.gni")
import("//build/lite/config/component/lite_component.gni")
import("hdf.gni")

group("drivers") {
    deps = []

    if (drivers_flash_enable == true) {
        deps += [ "flash:flash" ]
    }

    if (drivers_gpio_enable == true) {
        deps += [ "gpio:gpio" ]
    }

    if (drivers_i2c_enable == true) {
        deps += [ "i2c:i2c" ]
    }

    if (drivers_spi_enable == true) {
        deps += [ "spi:spi" ]
    }

    if (drivers_uart_enable == true) {
        deps += [ "uart:uart" ]
    }

    if (drivers_pwm_enable == true) {
        deps += [ "pwm:pwm" ]
    }

    if (drivers_touch_enable == true) {
        deps += [ "touch:touch" ]
    }

    if (drivers_wifi_enable == true) {
        deps += [ "wifi:wifi" ]
    }

    if (drivers_test_enable == true) {
        deps += [ "tests:driver_test" ]
    }
}